# md_cloud_classification

./: .gitignore  README.md  example_application.py  md_cloud_classification.py  pyproject.toml  setup.py
example/: example_application.py  example_config.yml
md_cloud_classification/: __init__.py  default_thresholds.yml  md_cloud_classification.py
md_cloud_classification/toolbox/: __init__.py  file_tools.py  md_cloud_result.py
toolbox/: md_cloud_result.py  time_conversions.py
validation/: Plot_confusion_matrix.py  cloud_classification_mapa.py  cloud_tools.py  tools.py  v0_config_frm4doas_stud.yml  v0_config_threshold.yml  v1_config.yml  validation_md_cloud_classification.py
